--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "^19.1.5",
     "ajv": "^8.17.1",
     "framer-motion": "^12.11.3",
-    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
@@ -53,9 +52,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17"
   },
-  "homepage": "https://github.com/bellas-bytes/portfolio-v2"
+  "homepage": "https://bellas-bytes.github.io/bellas-bytes-portfolio/"
 }
